# digital_sensors

./: .gitignore  Makefile  data_processing.md  pyproject.toml
configs/: config.ini  iotedge_headers.json  sensors_config.json  tcp_clients_config.txt
digital_sensors/: app_logger.py  data_parsers.py  main.py  models.py  stream_processor.py  utils.py
tests/: gpgga.txt
